back to tifffile for the mask is it seems to work now with anaconda. Allright.

--- a/Plaque_image_XRD_demo/Plaque_image_h5.ipynb
+++ b/Plaque_image_XRD_demo/Plaque_image_h5.ipynb
@@ -17,13 +17,14 @@
     "\n",
     "* La librairie `fabio` permet de charger les images 2D issue des détecteurs de rayons X. \n",
     "* La librairie `pyFAI` permet l'intégration azimuthale des plaques images (FAI : Fast Azimuthal Integrator)\n",
+    "* La librairie `tifffile` qui permet le traitement d'images au formats tiff (le masque dessiné avec Dioptas ici).\n",
     "\n",
-    "En cas d'erreur(s), il peut être nécessaire d'installer manuellement les modules suivants: `h5py`, `hdf5plugin`, `pyopencl`, en plus des précédents."
+    "__Attention__: En cas d'erreur(s) dans ce notebook, il peut être nécessaire d'installer manuellement les packages suivants: `h5py`, `hdf5plugin`, `pyopencl`, `libtiff`, et/ou `imagecodecs`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "b00ba0f6",
    "metadata": {},
    "outputs": [],
@@ -31,7 +32,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import fabio \n",
-    "import pyFAI"
+    "import pyFAI\n",
+    "import tifffile"
    ]
   },
   {
@@ -44,18 +46,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "a5e5b1d1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:fabio.tifimage:Unable to read image.mask with TiffIO due to Compressed TIFF images not supported except packbits, trying PIL\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# On charge dans ai le fichier de calibration .poni (généré par exemple avec Dioptas) :\n",
     "ai = pyFAI.load('calib.poni')\n",
@@ -66,8 +60,8 @@
     "# on ouvre la plaque image avec fabio\n",
     "img = fabio.open(f)\n",
     "\n",
-    "# on charge le masque (celui-ci a été généré avec Dioptas) :\n",
-    "mask = fabio.open('image.mask').data"
+    "# on charge le masque (celui-ci a été généré avec Dioptas) en utilisant la librairie tifffile :\n",
+    "mask = tifffile.imread('image.mask')"
    ]
   },
   {
@@ -88,17 +82,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "75bb62ff",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f56a47d94f0>"
+       "<matplotlib.image.AxesImage at 0x7fe590ff4df0>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -136,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "id": "7e493355",
    "metadata": {},
    "outputs": [
@@ -152,7 +146,7 @@
        "       [1, 1, 1, ..., 1, 1, 1]], dtype=int32)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,17 +165,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "id": "716bed9c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f56a53b6250>"
+       "<matplotlib.image.AxesImage at 0x7fe5910281c0>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -228,17 +222,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "id": "78ee5607",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f56a5340550>"
+       "<matplotlib.image.AxesImage at 0x7fe588035be0>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -303,17 +297,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "id": "0ecbde80",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f56a52c8460>]"
+       "[<matplotlib.lines.Line2D at 0x7fe590f1ddf0>]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -387,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "id": "3bab6414",
    "metadata": {
     "scrolled": false
@@ -396,10 +390,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f56a51ded60>"
+       "<matplotlib.image.AxesImage at 0x7fe590e96e50>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
